# passform2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  JSONDataManager.py  Makefile  PassForM2.drawio  README.md  config.json  docker-compose.yaml  node_main.py  package.xml  passform2_ws.sh  pyproject.toml  test_agent.py
passform2_agent/passform_agent_planning/: CMakeLists.txt
passform2_agent/passform_agent_planning/config/: grid.yaml  monitor.rviz
passform2_agent/passform_agent_planning/launch/: dynamic_grid.launch.py
passform2_agent/passform_agent_planning/scripts/: agent_node.py  central_planner_node.py  monitor_node.py
passform2_agent_backend/: .gitignore  package.xml  pyproject.toml  start__backend.sh  tauri.conf.json
passform2_agent_backend/app/: config.py  main.py  rfid_reader.py  system_api.py
passform2_agent_backend/app/core/module_base/: package.xml
passform2_agent_backend/app/core/module_description/: package.xml  setup.cfg
passform2_agent_backend/app/core/module_safety/: CMakeLists.txt  package.xml
passform2_agent_backend/app/core/passform_base/: README.md  package.xml  setup.py
passform2_agent_backend/app/core/passform_driver/: setup.cfg  setup.py
passform2_agent_backend/app/core/passform_product/: setup.cfg  setup.py
passform2_agent_backend/app/core/passform_skills/: package.xml  setup.py
passform2_agent_backend/app/core/passform_util/: README.md  setup.cfg  setup.py
passform2_agent_backend/app/logic/: planner.py
passform2_agent_backend/app/managers/: agent_manager.py  config_manager.py  nfc_manager.py  node_manager.py  path_manager.py  persistence_manager.py  skill_manager.py  socket_io_manager.py
passform2_agent_backend/app/ros/: ros_client.py
passform2_agent_backend/app/socket/: socket_io_manager.py
passform2_agent_backend/config/: params.yaml
passform2_agent_backend/data/: config__initial__00.json  config__session__00.json
passform2_agent_backend/data/templates/: demo_layout_biba.json
passform2_agent_backend/launch/: backend.launch.py
passform2_agent_backend/src/: lib.rs  main.rs
passform2_agent_backend/src/behaviour_tree/: htn.rs  mod.rs  sequence_node.rs  skill_node.rs
passform2_agent_backend/src/behaviour_tree/skills/: mod.rs
passform2_agent_backend/src/bin_backup/: inventory_manager.rs  module_manager.rs  nfc_manager.rs  task_manager.rs
passform2_agent_backend/src/com/: proxy.rs
passform2_agent_backend/src/core/: config.rs  mod.rs
passform2_agent_backend/src/core/basyx/: connector.rs  mod.rs  rest_server.rs
passform2_agent_backend/src/core/logic/: mod.rs  planner.rs
passform2_agent_backend/src/core/skills/: base.rs  mixins.rs  mod.rs  relay.rs
passform2_agent_backend/src/core/types/: agent_entry.rs  bay.rs  bay_aas.rs  inventory.rs  location.rs  master.rs  mod.rs  module.rs  parameter.rs  plant_model.rs  skills.rs  status.rs
passform2_agent_backend/src/core/util/: basyx_lookup.rs  helper.rs  log_level.rs  mod.rs  network.rs  registration.rs  time.rs  util.rs  watchdog.rs
passform2_agent_backend/src/managers/: agent_manager.rs  basyx_manager.rs  config_manager.rs  inventory_manager.rs  match_manager.rs  mod.rs  node_manager.rs  path_manager.rs  protocol_manager.rs  resource_manager.rs  rfid_manager.rs  skill_manager.rs  socket_io_manager.rs  system_api.rs
passform2_agent_backend/src/ros/: mod.rs  ros_client.rs  ros_converters.rs  ros_heartbeat.rs
passform2_agent_frontend/: .gitignore  elm.json  index.html  index.ts  manifest.json  package-lock.json  package.json  pyproject.toml  setup.cfg  start__frontend.sh  styleguide.html  styleguide_entry.ts  vite.config.js
passform2_agent_frontend/config/: params.yaml
passform2_agent_frontend/launch/: passform2_agent_frontend_launch.py
passform2_agent_frontend/passform2_agent_frontend/: .gitignore  Update.elm  elm.json  index.html  index.ts  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
passform2_agent_frontend/passform2_agent_frontend/src/: Decoders.elm  Main.elm  Ports.elm  ThreeGridScene.ts  Types.elm  Update.elm
passform2_agent_frontend/passform2_agent_frontend/src/Types/: Domain.elm
passform2_agent_frontend/passform2_agent_frontend/src/Update/: Agents.elm  Hardware.elm  Planning.elm  System.elm
passform2_agent_frontend/passform2_agent_frontend/src/View/: HardwareStatus.elm  Modal.elm  Navbar.elm  Sidebar.elm
passform2_agent_frontend/passform2_agent_frontend/tests/: ModelTest.elm  PlanningLogicTest.elm  TestHelpers.elm  ViewHelperTest.elm
passform2_agent_frontend/src/: Decoders.elm  Main.elm  Ports.elm  ThreeGridScene.ts  Types.elm  Update.elm
passform2_agent_frontend/src/Domain/Representations/: Agent.elm  Grid.elm  Mission.elm  Skill.elm
passform2_agent_frontend/src/ShadowLogic/: DriverTranslator.elm
passform2_agent_frontend/src/ShadowLogic/passform_viz/: package.xml
passform2_agent_frontend/src/Types/: Domain.elm
passform2_agent_frontend/src/Update/: Agents.elm  Hardware.elm  Planning.elm  System.elm
passform2_agent_frontend/src/View/Atoms/: Button.elm
passform2_agent_frontend/src/View/Layouts/: LandingLayout.elm  MainLayout.elm
passform2_agent_frontend/src/View/Molecules/: HardwareStatus.elm
passform2_agent_frontend/src/View/Organisms/: Modal.elm  Navbar.elm  Sidebar.elm  ThreeDScene.elm
passform2_agent_frontend/src/View/Styleguide/: Styleguide.elm
passform2_agent_frontend/src/View/WebGL/: Scene.elm  Shaders.elm
passform2_agent_frontend/src/assets/styles/: main.scss
passform2_agent_frontend/tests/: DecodersTest.elm  EncodersTest.elm  TestHelpers.elm  ViewHelperTest.elm
passform2_agent_frontend/tests/Domain/Representations/: AgentTest.elm  GridTest.elm  MissionTest.elm  SkillTest.elm
passform2_agent_frontend/tests/Update/: AgentsTest.elm  HardwareTest.elm  PlanningTest.elm
passform2_ws/src/passform2/: JSONDataManager.py  README.md  package.xml  pyproject.toml  setup.cfg
passform2_ws/src/passform2_rfid/: package.xml  pyproject.toml  setup.cfg
passform2_ws/src/passform_agent_planning/: package.xml
passform2_ws/src/passform_agent_resources/: CMakeLists.txt  package.xml
(+487 files in other folders)
