<?xml version="1.0"?>
<package format="3">
  <name>passform2</name>
  <version>0.1.0</version>
  <description>passform2</description>
  <maintainer email="wnt@biba.uni-bremen.de">maintainer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
