<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>passform_agent_backend</name>
  <version>0.1.0</version>
  <description>Backend agent for processing ROS2 data and providing an API interface</description>
  <maintainer email="marten@passform.local">Marten</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  <buildtool_depend>cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>