[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passform2_rfid"
version = "0.1.0"
description = "RFID Hardware Driver Node for passform2"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "setuptools",
    "rclpy",
    "std_msgs",
    "spidev",
    "mfrc522"
]

[project.scripts]
rfid_node = "passform2_rfid.rfid_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["passform2_rfid*"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/passform2_rfid"]
"share/passform2_rfid" = ["package.xml"]