<?xml version="1.0"?>
<package format="3">
  <name>passform_agent_planning</name>
  <version>0.0.0</version>
  <description>Passform Agent Planning: Dezentrales ROS2 Pfadplanungs-Framework</description>
  <license>MIT</license>

  <maintainer email="emil@todo.todo">emil</maintainer>


  <!-- buildtool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Python & ROS dependencies -->
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
