<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>module_base</name>
  <version>0.0.0</version>
  <description></description>
  <maintainer></maintainer>
  <license></license>

  <depend>passform_msgs</depend>
  <depend>passform_util</depend>
  <depend>nav2_lifecycle_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
