<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>passform_base</name>
  <version>0.0.0</version>
  <description>PassForM Basis</description>
  <maintainer email="wil@biba.uni-bremen.de">Jasper Wilhelm</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>passform_msgs</exec_depend>
  <exec_depend>passform_util</exec_depend>
  <exec_depend>passform_driver</exec_depend>
  <exec_depend>sw_watchdog_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
